--- a/src/app/pages/home-page/home-page.scss
+++ b/src/app/pages/home-page/home-page.scss
@@ -17,7 +17,7 @@
 }
 
 .game-list {
-  width: 90%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,3 +32,13 @@
   margin-top: 20px;
 }
 
+.last-obtained-trophies {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home-trophy-card {
+  width: 100%;
+}
