Changed user by player

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -5,6 +5,6 @@
   </div>
 
   <ul class="navbar-links">
-    <li><a id="navbar-users-link" routerLink="/users" routerLinkActive="active">Utilisateurs</a></li>
+    <li><a id="navbar-players-link" routerLink="/players" routerLinkActive="active">Joueurs</a></li>
   </ul>
 </nav>
