--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -50,15 +50,15 @@
     }
   }
 
-  .navbar-user {
+  .navbar-players {
     cursor: pointer;
 
-    .user-profile-avatar {
+    .player-profile-avatar {
       border-radius: 5px;
       border: 1px solid #000;
     }
 
-    .user-profile-name {
+    .player-profile-name {
       padding-left: 10px;
     }
   }
