--- a/src/app/components/profile-summary/profile-summary.html
+++ b/src/app/components/profile-summary/profile-summary.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="profile-name">
-      {{ profile?.profileName || 'Nom du Profil' }}
+      {{ profile?.pseudo || 'Nom du Profil' }}
     </div>
   </div>
 
