--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -1,6 +1,6 @@
 <div class="profile-page container container-fluid">
   <app-profile-summary
-    [profile]="profileStore.user()"
+    [profile]="profileStore.player()"
     [style.animationDelay.ms]="100"
     [trophyCount]="profileStore.trophyCount()"
     animate.enter="block-enter"/>
