--- a/src/app/components/home-obtained-trophy-card/home-obtained-trophy-card.html
+++ b/src/app/components/home-obtained-trophy-card/home-obtained-trophy-card.html
@@ -12,8 +12,8 @@
   </div>
   <div class="earned-info-wrapper">
     <div class="trophy-earned-by">
-      <img [height]="28" [width]="28" alt="User" class="user-icon" ngSrc="assets/icons/user.svg"/>
-      <span class="user-name">{{ trophy.obtainedBy }}</span>
+      <img [height]="28" [width]="28" alt="" class="player-icon" ngSrc="assets/icons/user.svg"/>
+      <span class="player-name">{{ trophy.obtainedBy }}</span>
     </div>
     <div class="trophy-earned-date">{{ trophy.obtainedDate | date: 'dd/MM/yyyy HH:mm' }}</div>
   </div>
