--- a/src/app/pages/players-page/players-page.component.scss
+++ b/src/app/pages/players-page/players-page.component.scss
@@ -1,33 +1,15 @@
 @use 'styles/colors' as *;
 
-.user-card-enter {
-  animation-name: user-card-enter;
-  animation-duration: 500ms;
-  animation-timing-function: ease-out;
-  animation-fill-mode: both;
-}
-
-@keyframes user-card-enter {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.user-card-wrapper {
+.player-card-wrapper {
   padding-top: 20px;
 }
 
-.user-card {
+.player-card {
   background-color: $blue-light;
   cursor: pointer;
   transition: transform 0.25s ease, box-shadow 0.15s ease;
 
-  .user-name {
+  .player-name {
     font-size: 18px;
     display: block;
     white-space: nowrap;
@@ -36,7 +18,7 @@
     max-width: 100%;
   }
 
-  .user-card-image {
+  .player-card-image {
     width: 100%;
     max-height: 350px;
     object-fit: cover;
@@ -48,7 +30,7 @@
     box-shadow: 0 4px 12px $blue-medium;
   }
 
-  .user-see-profile-button {
+  .see-profile-button {
     background-color: $blue-main;
   }
 }
