--- a/src/app/pages/players-page/players-page.component.scss
+++ b/src/app/pages/players-page/players-page.component.scss
@@ -9,7 +9,7 @@
   cursor: pointer;
   transition: transform 0.25s ease, box-shadow 0.15s ease;
 
-  .player-name {
+  .player-pseudo {
     font-size: 18px;
     display: block;
     white-space: nowrap;
