--- a/src/app/components/home-game-card/home-game-card.scss
+++ b/src/app/components/home-game-card/home-game-card.scss
@@ -11,7 +11,9 @@
   align-items: center;
 
   .game-title {
-    padding-left: 5px;
+    padding-left: 10px;
+    font-size: 18px;
+    font-weight: bold;
   }
 }
 
