--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,10 +1,10 @@
 <nav class="navbar">
   <div class="navbar-left" routerLink="/home">
-    <img alt="" class="navbar-logo" height="32" ngSrc="../../../assets/icons/trophyquest-icon-32.png" width="32"/>
+    <img alt="" class="navbar-logo" height="32" ngSrc="assets/icons/trophyquest-icon-32.png" width="32"/>
     <span class="navbar-title">TrophyQuest</span>
   </div>
 
   <ul class="navbar-links">
-    <li><a id="navbar-players-link" routerLink="/players" routerLinkActive="active">Joueurs</a></li>
+    <li><a id="navbar-players-link" routerLink="/players" routerLinkActive="active">Players</a></li>
   </ul>
 </nav>
