--- a/src/app/components/trophy-count-displayer/trophy-count-displayer.html
+++ b/src/app/components/trophy-count-displayer/trophy-count-displayer.html
@@ -1,33 +1,37 @@
 <div class="trophy-count-displayer">
   @if (trophyCount.platinum > 0) {
     <div [style.flex-direction]="flexDirection" class="trophy-item platinum-trophy">
-      <img [height]="iconSize" [width]="iconSize" alt="Trophées platines"
+      <img [height]="iconSize" [width]="iconSize" alt=""
            ngSrc="assets/icons/trophy-platinum.png"/>
-      <span [style.font-size]="textSizePx + 'px'" class="trophy-count">{{ trophyCount.platinum || '-' }}</span>
+      <span [class.trophy-count-horizontal]="isLabelHorizonal" [style.font-size]="textSizePx + 'px'"
+            class="trophy-count">{{ trophyCount.platinum || '-' }}</span>
     </div>
   }
 
   @if (trophyCount.gold > 0) {
     <div [style.flex-direction]="flexDirection" class="trophy-item gold-trophy">
-      <img [height]="iconSize" [width]="iconSize" alt="Trophées or"
+      <img [height]="iconSize" [width]="iconSize" alt=""
            ngSrc="assets/icons/trophy-gold.png"/>
-      <span [style.font-size]="textSizePx + 'px'" class="trophy-count">{{ trophyCount.gold || '-' }}</span>
+      <span [class.trophy-count-horizontal]="isLabelHorizonal" [style.font-size]="textSizePx + 'px'"
+            class="trophy-count">{{ trophyCount.gold || '-' }}</span>
     </div>
   }
 
   @if (trophyCount.silver > 0) {
     <div [style.flex-direction]="flexDirection" class="trophy-item silver-trophy">
-      <img [height]="iconSize" [width]="iconSize" alt="Trophées argent"
+      <img [height]="iconSize" [width]="iconSize" alt=""
            ngSrc="assets/icons/trophy-silver.png"/>
-      <span [style.font-size]="textSizePx + 'px'" class="trophy-count">{{ trophyCount.silver || '-' }}</span>
+      <span [class.trophy-count-horizontal]="isLabelHorizonal" [style.font-size]="textSizePx + 'px'"
+            class="trophy-count">{{ trophyCount.silver || '-' }}</span>
     </div>
   }
 
   @if (trophyCount.bronze > 0) {
     <div [style.flex-direction]="flexDirection" class="trophy-item bronze-trophy">
-      <img [height]="iconSize" [width]="iconSize" alt="Trophées bronze"
+      <img [height]="iconSize" [width]="iconSize" alt=""
            ngSrc="assets/icons/trophy-bronze.png"/>
-      <span [style.font-size]="textSizePx + 'px'" class="trophy-count">{{ trophyCount.bronze || '-' }}</span>
+      <span [class.trophy-count-horizontal]="isLabelHorizonal" [style.font-size]="textSizePx + 'px'"
+            class="trophy-count">{{ trophyCount.bronze || '-' }}</span>
     </div>
   }
 </div>
