--- a/src/app/pages/home-page/home-page.scss
+++ b/src/app/pages/home-page/home-page.scss
@@ -1,3 +1,5 @@
+@use "styles/colors" as *;
+
 .home-page {
   padding-top: 20px;
   padding-bottom: 50px;
@@ -8,7 +10,22 @@
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
+
+.welcome-message {
+  font-size: 32px;
+  color: $blue-main;
+  font-weight: bolder;
+}
+
+.home-summary {
+  height: 90%;
+}
+
 
 .home-page-content {
   padding-top: 40px;
