--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -1,5 +1,6 @@
 <div class="profile-page container container-fluid">
   <app-profile-summary [player]="profileStore.player()" [style.animationDelay.ms]="100"
+                       [totalEarnedTrophies]="profileStore.totalEarnedTrophies()"
                        [totalPlayedGames]="profileStore.totalPlayedGames()"
                        [trophyCount]="profileStore.trophyCount()"
                        animate.enter="block-enter"/>
@@ -7,26 +8,32 @@
   <div class="profile-collection-wrapper">
     <div [style.animationDelay.ms]="200" animate.enter="block-enter" class="profile-game-list">
       <span class="collection-title">Last played games</span>
-      @for (game of profileStore.gameResults(); track game.id; let i = $index) {
+      @for (collection of profileStore.collections(); track collection.collectionId; let i = $index) {
         @if (i !== 0) {
           <hr class="game-separator"/>
         }
-        <app-profile-game-card (gameClicked)="navigateToGamePage($event)"
-                               [game]="game"
+        <app-profile-game-card (clickOnTitle)="navigateToGamePage(collection)"
+                               [collection]="collection"
                                class="profile-game-card"></app-profile-game-card>
       }
-      @if (profileStore.hasMoreGames() && !profileStore.isLoadingGames()) {
+      @if (profileStore.hasMoreCollections() && !profileStore.isLoadingCollections()) {
         <a (click)="loadMoreGames()" class="load-more-button">Load more games...</a>
       }
-      @if (profileStore.isLoadingGames()) {
+      @if (profileStore.isLoadingCollections()) {
         <div class="spinner-container">
           <mat-spinner></mat-spinner>
         </div>
       }
+      @if (profileStore.hasNoCollections()) {
+        <span class="no-items-message">No games found</span>
+      }
+      @if (profileStore.hasErrorLoadingCollections()) {
+        <span class="error-message">Error loading games!</span>
+      }
     </div>
     <div [style.animationDelay.ms]="200" animate.enter="block-enter" class="profile-trophies-list">
       <span class="collection-title">Last earned trophies</span>
-      @for (trophy of profileStore.trophyResults(); track trophy.id; let i = $index) {
+      @for (trophy of profileStore.trophies(); track trophy.id; let i = $index) {
         @if (i !== 0) {
           <hr class="trophy-separator"/>
         }
@@ -39,6 +46,12 @@
         <div class="spinner-container">
           <mat-spinner></mat-spinner>
         </div>
+      }
+      @if (profileStore.hasNoTrophies()) {
+        <span class="no-items-message">No trophies found</span>
+      }
+      @if (profileStore.hasErrorLoadingTrophies()) {
+        <span class="error-message">Error loading trophies!</span>
       }
     </div>
   </div>
