--- a/src/app/pages/profile-page/profile-page.scss
+++ b/src/app/pages/profile-page/profile-page.scss
@@ -51,3 +51,12 @@
   padding: 20px;
   cursor: pointer;
 }
+
+.no-trophies-message {
+  font-size: 18px;
+}
+
+.error-message {
+  color: rgba(red, 0.8);
+  font-size: 25px;
+}
