--- a/src/app/components/profile-game-card/profile-game-card.scss
+++ b/src/app/components/profile-game-card/profile-game-card.scss
@@ -2,72 +2,60 @@
 
 .profile-game-card {
   border: 1px solid transparent;
-  border-radius: 0.75rem;
-  background-color: rgba(0, 0, 0, 0.03);
+  border-radius: 10px;
+  background-color: rgba($blue-main, 0.05);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
+  width: 100%;
 
   &.completed {
     background-color: $green-light;
   }
 
-  &.expanded {
-    border-color: $blue-medium;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-  }
-
   &:hover {
-    transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   }
-}
 
-.profile-game-header {
-  padding: 0.5rem 0.75rem;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+  .game-infos {
+    display: flex;
+    align-items: center;
+  }
 
-.profile-game-infos {
-  display: flex;
-  align-items: center;
-}
+  .collection-image {
+    max-width: 80px;
+    max-height: 80px;
+    object-fit: contain;
+    border-radius: 5px;
+  }
 
-.profile-game-title {
-  font-weight: 600;
-  font-size: 1.1rem;
-  margin-left: 10px;
-}
+  .platform-and-title {
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+  }
 
-.collection-title {
-  margin-left: 10px;
-}
+  .profile-game-title {
+    font-size: 15px;
+    cursor: pointer;
+  }
 
-.profile-game-collection {
-  margin: 0.5rem;
-  padding: 0.5rem;
-  border-radius: 0.5rem;
-  background-color: $blue-light;
-  color: $blue-main;
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  cursor: pointer;
-}
+  .game-progression {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 35%;
+  }
 
-.collection-title-wrapper {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-left: 10px;
-}
+  .progress-bar-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 
-.collection-platform {
-  font-family: 'Verdana', monospace;
-  font-size: 0.8rem;
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 0 4px;
+    &.completed {
+      color: $green-main;
+    }
+  }
 }
