--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -1,7 +1,7 @@
 <div class="profile-page container container-fluid">
   <app-profile-summary [player]="profileStore.player()" [style.animationDelay.ms]="100"
                        [totalEarnedTrophies]="profileStore.totalEarnedTrophies()"
-                       [totalPlayedGames]="profileStore.totalPlayedGames()"
+                       [totalGamesPlayed]="profileStore.totalPlayedGames()"
                        [trophyCount]="profileStore.trophyCount()"
                        animate.enter="block-enter"/>
 
