--- a/src/app/components/game-summary/game-summary.scss
+++ b/src/app/components/game-summary/game-summary.scss
@@ -1,4 +1,39 @@
+@use 'styles/colors' as *;
+
 .game-summary {
+  height: 1000px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: rgba($blue-main, 0.2);
+  border-radius: 10px;
+  width: 100%;
+  padding: 30px;
+
+  .game-infos-wrapper {
+    width: 100%;
+    display: flex;
+
+    .game-image {
+      width: 400px;
+      height: 400px;
+      justify-self: flex-start;
+      border-radius: 10px;
+      border: 3px solid $blue-main;
+    }
+
+    .game-title {
+      width: -webkit-fill-available;
+      margin-left: 20px;
+      text-align: center;
+    }
+  }
+}
+
+.temp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
