--- a/src/app/pages/collection-page/collection-page.component.scss
+++ b/src/app/pages/collection-page/collection-page.component.scss
@@ -1,8 +1,8 @@
-.game-page {
+.collection-page {
   padding-top: 20px;
   padding-bottom: 50px;
 
-  .game-header {
+  .collection-header {
     min-height: 500px;
     display: flex;
     flex-direction: column;
@@ -11,7 +11,7 @@
     margin-bottom: 20px;
   }
 
-  .game-summary {
+  .collection-summary {
     width: 100%;
   }
 
