--- a/src/app/components/collection-summary/collection-summary.component.scss
+++ b/src/app/components/collection-summary/collection-summary.component.scss
@@ -1,6 +1,6 @@
 @use 'styles/colors' as *;
 
-.game-summary {
+.collection-summary {
   height: 1000px;
   display: flex;
   flex-direction: column;
@@ -30,10 +30,4 @@
       text-align: center;
     }
   }
-}
-
-.temp {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
