--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -1,41 +1,42 @@
 <div class="home-page container container-fluid">
-  <div class="home-page-header">
-    <span class="welcome-message">Welcome on TrophyQuest</span>
-    <app-home-summary [nbGames]="gameListStore.total()"
-                      [nbPlayers]="playerListStore.total()"
-                      [nbTrophies]="obtainedTrophiesStore.total()"
-                      class="home-summary"/>
-  </div>
+    <div class="home-page-header">
+        <span class="welcome-message">Welcome on TrophyQuest</span>
+        <app-home-summary [nbGames]="gameListStore.total()"
+                          [nbPlayers]="playerListStore.total()"
+                          [nbTrophies]="obtainedTrophiesStore.total()"
+                          class="home-summary"/>
+    </div>
 
-  <div class="home-page-content">
-    <div class="game-list">
-      <h2>List of games</h2>
-      @for (game of gameListStore.results(); track game.id) {
-        <app-home-game-card [game]="game" class="home-game-card"></app-home-game-card>
-      }
-      @if (gameListStore.hasMoreGames() && !gameListStore.isLoading()) {
-        <a (click)="loadMoreGames()" class="button load-more">Load more games...</a>
-      }
-      @if (gameListStore.isLoading()) {
-        <div class="spinner-container">
-          <mat-spinner></mat-spinner>
+    <div class="home-page-content">
+        <div class="game-list">
+            <h2>List of games</h2>
+            @for (game of gameListStore.results(); track game.id) {
+                <app-home-game-card [game]="game" class="home-game-card"></app-home-game-card>
+            }
+            @if (gameListStore.hasMoreGames() && !gameListStore.isLoading()) {
+                <a (click)="loadMoreGames()" class="button load-more">Load more games...</a>
+            }
+            @if (gameListStore.isLoading()) {
+                <div class="spinner-container">
+                    <mat-spinner></mat-spinner>
+                </div>
+            }
         </div>
-      }
-    </div>
 
-    <div class="last-obtained-trophies">
-      <h2>Last obtained trophies</h2>
-      @for (trophy of obtainedTrophiesStore.results(); track trophy.id) {
-        <app-home-obtained-trophy-card (clickOnPlayer)="goToProfilePage(trophy.playerId)" [trophy]="trophy"
-                                       class="home-trophy-card"></app-home-obtained-trophy-card>
-      }
-      @if (obtainedTrophiesStore.hasMoreTrophies() && !obtainedTrophiesStore.isLoading()) {
-        <a (click)="loadMoreTrophies()" class="button load-more">Load more trophies...</a>
-      }
-      @if (obtainedTrophiesStore.isLoading()) {
-        <div class="spinner-container"></div>
-      }
-    </div>
+        <div class="last-obtained-trophies">
+            <h2>Last obtained trophies</h2>
+            @for (trophy of obtainedTrophiesStore.results(); track trophy.id) {
+                <app-home-obtained-trophy-card (clickOnPlayer)="navigateToProfilePage(trophy.playerId)"
+                                               [trophy]="trophy"
+                                               class="home-trophy-card"></app-home-obtained-trophy-card>
+            }
+            @if (obtainedTrophiesStore.hasMoreTrophies() && !obtainedTrophiesStore.isLoading()) {
+                <a (click)="loadMoreTrophies()" class="button load-more">Load more trophies...</a>
+            }
+            @if (obtainedTrophiesStore.isLoading()) {
+                <div class="spinner-container"></div>
+            }
+        </div>
 
-  </div>
+    </div>
 </div>
