--- a/src/app/pages/collection-page/collection-page.component.scss
+++ b/src/app/pages/collection-page/collection-page.component.scss
@@ -1,6 +1,10 @@
 .collection-page {
   padding-top: 20px;
   padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 
   .collection-header {
     min-height: 500px;
@@ -25,7 +29,15 @@
     font-weight: 600;
   }
 
-  .trophy-list {
+  .trophy-list-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .group-trophy-list {
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,6 +51,19 @@
     color: rgba(0, 0, 0, 0.54);
     margin: 5px;
     width: 95%;
+  }
+
+  .error-message-wrapper {
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .error-message {
+    color: rgba(red, 0.8);
+    font-size: 25px;
+    font-weight: bold;
   }
 
 }
