--- a/src/app/components/collection-summary/collection-summary.component.scss
+++ b/src/app/components/collection-summary/collection-summary.component.scss
@@ -1,33 +1,44 @@
 @use 'styles/colors' as *;
 
 .collection-summary {
-  height: 500px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-
   background-color: rgba($blue-main, 0.2);
   border-radius: 10px;
-  width: 100%;
   padding: 30px;
 
-  .game-infos-wrapper {
-    width: 100%;
+  .game-image {
+    max-width: 400px;
+    justify-self: flex-start;
+    border-radius: 10px;
+    border: 3px solid $blue-main;
+  }
+
+  .summary-content {
+    width: -webkit-fill-available;
+    margin-left: 20px;
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 
-    .game-image {
-      width: 400px;
-      height: 400px;
-      justify-self: flex-start;
-      border-radius: 10px;
-      border: 3px solid $blue-main;
-    }
+  .title-and-platform {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .game-title {
-      width: -webkit-fill-available;
-      margin-left: 20px;
-      text-align: center;
-    }
+  .game-platform {
+    margin-left: 20px;
+  }
+
+  .game-title {
+    color: $blue-main;
+    font-size: 25px;
+  }
+
+  .trophy-count-wrapper {
+    display: flex;
+    justify-content: center;
   }
 }
