--- a/src/app/pages/collection-page/collection-page.component.scss
+++ b/src/app/pages/collection-page/collection-page.component.scss
@@ -4,10 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 30px;
 
   .collection-header {
-    min-height: 500px;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
