--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -1,59 +1,59 @@
 <div class="profile-page container container-fluid">
-  <app-profile-summary [player]="profileStore.player()" [style.animationDelay.ms]="100"
-                       [totalEarnedTrophies]="profileStore.totalEarnedTrophies()"
-                       [totalGamesPlayed]="profileStore.totalPlayedGames()"
-                       [trophyCount]="profileStore.trophyCount()"
-                       animate.enter="block-enter"/>
+    <app-profile-summary [player]="profileStore.player()" [style.animationDelay.ms]="100"
+                         [totalEarnedTrophies]="profileStore.totalEarnedTrophies()"
+                         [totalGamesPlayed]="profileStore.totalPlayedGames()"
+                         [trophyCount]="profileStore.trophyCount()"
+                         animate.enter="block-enter"/>
 
-  <div class="profile-collection-wrapper">
-    <div [style.animationDelay.ms]="200" animate.enter="block-enter" class="profile-game-list">
-      <span class="collection-title">Last played games</span>
-      @for (collection of profileStore.collections(); track collection.collectionId; let i = $index) {
-        @if (i !== 0) {
-          <hr class="game-separator"/>
-        }
-        <app-profile-game-card (clickOnTitle)="navigateToGamePage(collection)"
-                               [collection]="collection"
-                               class="profile-game-card"></app-profile-game-card>
-      }
-      @if (profileStore.hasMoreCollections() && !profileStore.isLoadingCollections()) {
-        <a (click)="loadMoreGames()" class="load-more-button">Load more games...</a>
-      }
-      @if (profileStore.isLoadingCollections()) {
-        <div class="spinner-container">
-          <mat-spinner></mat-spinner>
+    <div class="profile-collection-wrapper">
+        <div [style.animationDelay.ms]="200" animate.enter="block-enter" class="profile-game-list">
+            <span class="collection-title">Last played games</span>
+            @for (collection of profileStore.collections(); track collection.collectionId; let i = $index) {
+                @if (i !== 0) {
+                    <hr class="game-separator"/>
+                }
+                <app-profile-collection-card (clickOnTitle)="navigateToPlayerCollectionPage(collection.collectionId)"
+                                             [collection]="collection"
+                                             class="profile-game-card"/>
+            }
+            @if (profileStore.hasMoreCollections() && !profileStore.isLoadingCollections()) {
+                <a (click)="loadMoreGames()" class="load-more-button">Load more games...</a>
+            }
+            @if (profileStore.isLoadingCollections()) {
+                <div class="spinner-container">
+                    <mat-spinner></mat-spinner>
+                </div>
+            }
+            @if (profileStore.hasNoCollections()) {
+                <span class="no-items-message">No games found</span>
+            }
+            @if (profileStore.hasErrorLoadingCollections()) {
+                <span class="error-message">Error loading games!</span>
+            }
         </div>
-      }
-      @if (profileStore.hasNoCollections()) {
-        <span class="no-items-message">No games found</span>
-      }
-      @if (profileStore.hasErrorLoadingCollections()) {
-        <span class="error-message">Error loading games!</span>
-      }
-    </div>
-    <div [style.animationDelay.ms]="200" animate.enter="block-enter" class="profile-trophies-list">
-      <span class="collection-title">Last earned trophies</span>
-      @for (trophy of profileStore.trophies(); track trophy.id; let i = $index) {
-        @if (i !== 0) {
-          <hr class="trophy-separator"/>
-        }
-        <app-profile-trophy-card [trophy]="trophy" class="profile-trophy-card"></app-profile-trophy-card>
-      }
-      @if (profileStore.hasMoreTrophies() && !profileStore.isLoadingTrophies()) {
-        <a (click)="loadMoreTrophies()" class="load-more-button">Load more trophies...</a>
-      }
-      @if (profileStore.isLoadingTrophies()) {
-        <div class="spinner-container">
-          <mat-spinner></mat-spinner>
+        <div [style.animationDelay.ms]="200" animate.enter="block-enter" class="profile-trophies-list">
+            <span class="collection-title">Last earned trophies</span>
+            @for (trophy of profileStore.trophies(); track trophy.id; let i = $index) {
+                @if (i !== 0) {
+                    <hr class="trophy-separator"/>
+                }
+                <app-profile-trophy-card [trophy]="trophy" class="profile-trophy-card"/>
+            }
+            @if (profileStore.hasMoreTrophies() && !profileStore.isLoadingTrophies()) {
+                <a (click)="loadMoreTrophies()" class="load-more-button">Load more trophies...</a>
+            }
+            @if (profileStore.isLoadingTrophies()) {
+                <div class="spinner-container">
+                    <mat-spinner/>
+                </div>
+            }
+            @if (profileStore.hasNoTrophies()) {
+                <span class="no-items-message">No trophies found</span>
+            }
+            @if (profileStore.hasErrorLoadingTrophies()) {
+                <span class="error-message">Error loading trophies!</span>
+            }
         </div>
-      }
-      @if (profileStore.hasNoTrophies()) {
-        <span class="no-items-message">No trophies found</span>
-      }
-      @if (profileStore.hasErrorLoadingTrophies()) {
-        <span class="error-message">Error loading trophies!</span>
-      }
     </div>
-  </div>
 
 </div>
