--- a/src/app/pages/collection-page/collection-page.component.scss
+++ b/src/app/pages/collection-page/collection-page.component.scss
@@ -1,3 +1,5 @@
+@use "styles/colors" as *;
+
 .collection-page {
   padding-top: 20px;
   padding-bottom: 50px;
@@ -48,7 +50,7 @@
   }
 
   .trophy-separator {
-    color: rgba(0, 0, 0, 0.54);
+    color: $tq-blue-medium;
     margin: 5px;
     width: 95%;
   }
@@ -61,7 +63,7 @@
   }
 
   .error-message {
-    color: rgba(red, 0.8);
+    color: $tq-red-dark;
     font-size: 25px;
     font-weight: bold;
   }
