--- a/src/app/components/home-game-card/home-game-card.scss
+++ b/src/app/components/home-game-card/home-game-card.scss
@@ -1,9 +1,12 @@
+@use "styles/colors" as *;
+
 .home-game-card {
   padding: 5px;
   margin: 1px;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: $tq-blue-lighter;
   display: flex;
   justify-content: space-between;
+  border-radius: 5px;
 }
 
 .title-image-wrapper {
