--- a/src/app/components/home-obtained-trophy-card/home-obtained-trophy-card.scss
+++ b/src/app/components/home-obtained-trophy-card/home-obtained-trophy-card.scss
@@ -3,7 +3,7 @@
 .home-obtained-trophy-card {
   padding: 5px;
   margin: 2px;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: $tq-blue-lighter;
   border-radius: 5px;
 }
 
@@ -45,7 +45,7 @@
 .trophy-earned-by {
   cursor: pointer;
   font-size: 1.1rem;
-  color: $blue-main;
+  color: $tq-blue-medium;
   display: flex;
   align-items: center;
 }
