--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1.5rem;
-  background: $blue-main;
+  background: $tq-blue-medium;
   color: #fff;
   border-bottom: 1px solid #2a2a2a;
 
