--- a/src/app/components/profile-summary/profile-summary.scss
+++ b/src/app/components/profile-summary/profile-summary.scss
@@ -5,8 +5,8 @@
   margin: 1.5rem auto;
   padding: 1.5rem 2rem;
   border-radius: 1.5rem;
-  background: $blue-light;
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
+  background: $tq-blue-lighter;
+  box-shadow: 0 6px 16px $tq-shadow;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,8 +23,8 @@
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  background: #ffffff;
-  border: 3px solid rgba(255, 255, 255, 0.85);
+  background: $tq-white;
+  border: 3px solid $tq-blue-dark;
 }
 
 .avatar-wrapper img {
