--- a/src/app/components/profile-trophy-card/profile-trophy-card.scss
+++ b/src/app/components/profile-trophy-card/profile-trophy-card.scss
@@ -1,7 +1,9 @@
+@use "styles/colors" as *;
+
 .profile-trophy-card {
   border: 1px solid transparent;
   border-radius: 0.75rem;
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: $tq-blue-lighter;
   padding: 0.5rem 0.75rem;
   cursor: pointer;
 }
