--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 // Learn more about theming and how to use it for your application's
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
+@use 'styles/colors' as *;
 
 html {
   @include mat.theme((
@@ -42,6 +43,7 @@ html, body {
 body {
   margin: 0;
   font-family: Helvetica, sans-serif;
+  color: $tq-blue-darker;
 }
 
 
@@ -95,13 +97,13 @@ body {
  */
 .platform-label {
   font-size: 0.8rem;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid $tq-blue-darker;
   border-radius: 2px;
   padding: 1px;
   font-family: Roboto, sans-serif;
 
   &--PS4 {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: $tq-blue-dark;
     color: white;
   }
 
